--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
         </div>
 
         <section class="age-result">
-            <h1>
+            <h1 class="dynamic-text">
                 <span class="dynamic-numbers"></span>
                 years
             </h1>
-            <h1>
+            <h1 class="dynamic-text">
                 <span class="dynamic-numbers"></span>
                 months
             </h1>
-            <h1>
+            <h1 class="dynamic-text">
                 <span class="dynamic-numbers"></span>
                 days
             </h1>
