--- a/index.html
+++ b/index.html
@@ -13,23 +13,20 @@
             <div class="label-group-one">
                 <label for="day">DAY</label>
                 <input type="text" id="day" class="input" placeholder="DD" autocomplete="off">
-                <p></p>
             </div>
 
             <div class="label-group-two">
                 <label for="month">MONTH</label>
                 <input type="text" id="month" class="input" placeholder="MM" autocomplete="off">
-                <p></p>
             </div>
         
             <div class="label-group-thre">
                 <label for="year">YEAR</label>
                 <input type="text" id="year" class="input" placeholder="YYYY" autocomplete="off">
-                <p></p>
             </div>
         </form>
         <div class="line"></div>
-        <div class="arrow">
+        <div class="arrow btn-div">
             <img src="./images/icon-arrow.svg" alt="arrow" class="arrow-image arrow">
         </div>
 
