--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
         <form class="form">
             <div class="label-group-one">
                 <label for="day">DAY</label>
-                <input type="text" id="day" class="input" placeholder="DD" autocomplete="off">
+                <input type="number" id="day" class="input" placeholder="DD" autocomplete="off">
             </div>
 
             <div class="label-group-two">
                 <label for="month">MONTH</label>
-                <input type="text" id="month" class="input" placeholder="MM" autocomplete="off">
+                <input type="number" id="month" class="input" placeholder="MM" autocomplete="off">
             </div>
         
             <div class="label-group-thre">
                 <label for="year">YEAR</label>
-                <input type="text" id="year" class="input" placeholder="YYYY" autocomplete="off">
+                <input type="number" id="year" class="input" placeholder="YYYY" autocomplete="off">
             </div>
         </form>
         <div class="line"></div>
