--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Age app</title>
-    <link rel="stylesheet" href="./design/style.css">
+    <link rel="stylesheet" href="./assets/design/style.css">
 </head>
 <body>
     <main class="card">
@@ -27,7 +27,7 @@
         </form>
         <div class="line"></div>
         <div class="arrow btn-div">
-            <img src="./images/icon-arrow.svg" alt="arrow" class="arrow-image arrow">
+            <img src="./assets/images/icon-arrow.svg" alt="arrow" class="arrow-image arrow">
         </div>
 
         <section class="age-result">
@@ -45,6 +45,6 @@
             </h1>
         </section>
     </main>
-    <script src="./script/index.js"></script>
+    <script src="./assets/"></script>
 </body>
 </html>
