--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
             </h1>
         </section>
     </main>
-    <script src="./assets/"></script>
+    <script src="./assets/script/index.js"></script>
 </body>
 </html>
