--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
                 <input type="number" id="year" class="input" placeholder="YYYY" autocomplete="off">
             </div>
         </form>
+        <div class="error-text"></div>
         <div class="line"></div>
         <div class="arrow btn-div">
             <img src="../src/assets/img/icon-arrow.svg" alt="arrow" class="arrow-image arrow">
