--- a/public/index.html
+++ b/public/index.html
@@ -12,17 +12,17 @@
         <form class="form">
             <div class="label-group-one">
                 <label for="day">DAY</label>
-                <input type="number" id="day" class="input" placeholder="DD" autocomplete="off">
+                <input type="number" id="day" class="inputs" placeholder="DD" autocomplete="off">
             </div>
 
             <div class="label-group-two">
                 <label for="month">MONTH</label>
-                <input type="number" id="month" class="input" placeholder="MM" autocomplete="off">
+                <input type="number" id="month" class="inputs" placeholder="MM" autocomplete="off">
             </div>
         
             <div class="label-group-thre">
                 <label for="year">YEAR</label>
-                <input type="number" id="year" class="input" placeholder="YYYY" autocomplete="off">
+                <input type="number" id="year" class="inputs" placeholder="YYYY" autocomplete="off">
             </div>
         </form>
         <div class="error-text"></div>
@@ -33,16 +33,13 @@
 
         <section class="age-result">
             <h1 class="dynamic-text">
-                <span class="dynamic-numbers"></span>
-                <span class="result-color dynamic-line">- -</span> years
+                <span class="result-color dynamic-line">--</span> years
             </h1>
             <h1 class="dynamic-text">
-                <span class="dynamic-numbers"></span>
-                <span class="result-color dynamic-line">- -</span> months
+                <span class="result-color dynamic-line">--</span> months
             </h1>
             <h1 class="dynamic-text">
-                <span class="dynamic-numbers"></span>
-                <span class="result-color dynamic-line">- -</span> days
+                <span class="result-color dynamic-line">--</span> days
             </h1>
         </section>
     </main>
