--- a/public/index.html
+++ b/public/index.html
@@ -11,25 +11,26 @@
     <main class="card">
         <form class="form">
             <div class="label-group-one">
-                <label for="day">DAY</label>
+                <label for="day">DAY</label><br>
                 <input type="number" id="day" class="inputs" placeholder="DD" autocomplete="off">
             </div>
 
             <div class="label-group-two">
-                <label for="month">MONTH</label>
+                <label for="month">MONTH</label><br>
                 <input type="number" id="month" class="inputs" placeholder="MM" autocomplete="off">
             </div>
         
             <div class="label-group-thre">
-                <label for="year">YEAR</label>
+                <label for="year">YEAR</label><br>
                 <input type="number" id="year" class="inputs" placeholder="YYYY" autocomplete="off">
             </div>
         </form>
-        <div class="error-text"></div>
-        <div class="line"></div>
-        <div class="arrow btn-div">
-            <img src="../src/assets/img/icon-arrow.svg" alt="arrow" class="arrow-image arrow">
-        </div>
+
+            <div class="line"></div>
+
+            <div class="arrow">
+                <img src="../src/assets/img/icon-arrow.svg" alt="arrow" class="arrow-image">
+            </div>
 
         <section class="age-result">
             <h1 class="dynamic-text">
