--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <!-- <link rel="stylesheet" href="../src/assets/css/style.css"> -->
     <link rel="stylesheet" href="../src/assets/css/mobilefirst.css" media="all">
 </head>
+
 <body>
     <main class="card">
         <form class="form">
@@ -20,18 +22,18 @@
                 <label for="month">MONTH</label><br>
                 <input type="number" id="month" class="inputs" placeholder="MM" autocomplete="off">
             </div>
-        
+
             <div class="label-group-thre">
                 <label for="year">YEAR</label><br>
                 <input type="number" id="year" class="inputs" placeholder="YYYY" autocomplete="off">
             </div>
         </form>
 
-            <div class="line"></div>
-
+        <div class="line">
             <div class="arrow">
                 <img src="../src/assets/img/icon-arrow.svg" alt="arrow" class="arrow-image">
             </div>
+        </div>
 
         <section class="age-result">
             <h1 class="dynamic-text">
@@ -47,4 +49,5 @@
     </main>
     <script src="./assets/js/bundle.js"></script>
 </body>
+
 </html>
