ajustando posicionamento dos elementos

--- a/public/index.html
+++ b/public/index.html
@@ -37,13 +37,13 @@
 
         <section class="age-result">
             <h1 class="dynamic-text">
-                <span class="result-color dynamic-line">--</span> years
+                <span class="dynamic-line">--</span> years
             </h1>
             <h1 class="dynamic-text">
-                <span class="result-color dynamic-line">--</span> months
+                <span class="dynamic-line">--</span> months
             </h1>
             <h1 class="dynamic-text">
-                <span class="result-color dynamic-line">--</span> days
+                <span class="dynamic-line">--</span> days
             </h1>
         </section>
     </main>
