--- a/public/index.html
+++ b/public/index.html
@@ -6,46 +6,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Age app</title>
-    <!-- <link rel="stylesheet" href="../src/assets/css/style.css"> -->
+
     <link rel="stylesheet" href="../src/assets/css/mobilefirst.css" media="all">
+    <link rel="stylesheet" href="../src/assets/css/style.css">
 </head>
 
 <body>
     <main class="card">
-        <form class="form">
-            <div class="label-group-one">
-                <label for="day">DAY</label><br>
-                <input type="number" id="day" class="inputs" placeholder="DD" autocomplete="off">
+            <form class="form">
+                <div class="label-group-one">
+                    <label for="day">DAY</label><br>
+                    <input type="number" id="day" class="inputs" placeholder="DD" autocomplete="off">
+                </div>
+                <div class="label-group-two">
+                    <label for="month">MONTH</label><br>
+                    <input type="number" id="month" class="inputs" placeholder="MM" autocomplete="off">
+                </div>
+                <div class="label-group-thre">
+                    <label for="year">YEAR</label><br>
+                    <input type="number" id="year" class="inputs" placeholder="YYYY" autocomplete="off">
+                </div>
+            </form>
+            <div class="line">
+                <div class="arrow">
+                    <img src="../src/assets/img/icon-arrow.svg" alt="arrow" class="arrow-image">
+                </div>
             </div>
-
-            <div class="label-group-two">
-                <label for="month">MONTH</label><br>
-                <input type="number" id="month" class="inputs" placeholder="MM" autocomplete="off">
-            </div>
-
-            <div class="label-group-thre">
-                <label for="year">YEAR</label><br>
-                <input type="number" id="year" class="inputs" placeholder="YYYY" autocomplete="off">
-            </div>
-        </form>
-
-        <div class="line">
-            <div class="arrow">
-                <img src="../src/assets/img/icon-arrow.svg" alt="arrow" class="arrow-image">
-            </div>
-        </div>
-
-        <section class="age-result">
-            <h1 class="dynamic-text">
-                <span class="dynamic-line">--</span> years
-            </h1>
-            <h1 class="dynamic-text">
-                <span class="dynamic-line">--</span> months
-            </h1>
-            <h1 class="dynamic-text">
-                <span class="dynamic-line">--</span> days
-            </h1>
-        </section>
+            <section class="age-result">
+                <h1 class="dynamic-text">
+                    <span class="dynamic-line">--</span> years
+                </h1>
+                <h1 class="dynamic-text">
+                    <span class="dynamic-line">--</span> months
+                </h1>
+                <h1 class="dynamic-text">
+                    <span class="dynamic-line">--</span> days
+                </h1>
+            </section>
     </main>
     <script src="./assets/js/bundle.js"></script>
 </body>
